<resources>
    <string name="app_name">PetCare Express</string>
    <string name="pet_food_portioning">Pet Food Portioning</string>
    <string name="grams">%.1f grams in total</string>
    <string name="pet_food_brand">Food Brand Name</string>
    <string name="pet_weight_kg">Pet Weight (kg):</string>
    <string name="enter_pet_weight_in_kilograms">Enter pet weight in kilograms</string>
    <string name="_2">2</string>
    <string name="enter_amount_of_meals_per_day">Enter amount of meals per day</string>
    <string name="amount_of_meals_per_day">Amount of meals (per day)</string>
    <string name="grams_per_meal">%.1f grams per meal</string>
    <string name="select_food">Select Food</string>
    <string name="add_item">Add Item</string>
    <string name="food_type">Food Type:</string>
    <string name="wet">Wet Food</string>
    <string name="dry">Dry Food</string>
    <string name="minimum_pet_weight">Minimum Pet Weight (kg):</string>
    <string name="minimum_feeding_amount">Minimum Feeding Amount (g):</string>
    <string name="pet_food_type">Pet Food Type</string>
    <string name="element">Element</string>
    <string name="select_food_item">Select Food Item:</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_item_button">Select Item</string>
    <string name="delete_item">Delete Item</string>
</resources>