<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/feature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_food_portioning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />

    <TextView
        android:id="@+id/serving_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <TextView
        android:id="@+id/pet_food_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_food_brand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.440" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.480">

        <TextView
            android:id="@+id/pet_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_weight_kg"
            />

        <EditText
            android:id="@+id/input_pet_weight"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:hint="@string/enter_pet_weight_in_kilograms"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>