<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pet_food_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/pet_food_brand_input"
            android:text="@string/pet_food_brand"/>
        <EditText
            android:id="@+id/pet_food_brand_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:ems="8"
            android:inputType="textCapSentences" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/food_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/pet_food_brand_input"
            android:text="@string/food_type"/>
        <RadioGroup
            android:id="@+id/food_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/wet_food_radio_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wet"/>
            <RadioButton
                android:id="@+id/dry_food_radio_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dry"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/minimum_pet_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/pet_food_brand_input"
            android:text="@string/minimum_pet_weight"/>
        <EditText
            android:id="@+id/minimum_pet_weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:ems="2"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/minimum_feed_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/pet_food_brand_input"
            android:text="@string/minimum_feeding_amount"/>
        <EditText
            android:id="@+id/minimum_feed_amount_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:ems="2"
            android:inputType="numberDecimal" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>